@@ -1,5 +1,6 @@
 package com.gpse.sesam.domain.user;
 
+import com.gpse.sesam.domain.mail.MailInformation;
 import com.gpse.sesam.domain.mail.MailService;
 import com.gpse.sesam.web.cmd.SesamUserCmd;
 import com.gpse.sesam.web.exception.ConflictException;
@@ -13,11 +14,11 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 @Service
 public class SesamUserServiceImpl implements SesamUserService {
@@ -28,7 +29,6 @@ public class SesamUserServiceImpl implements SesamUserService {
 	private final PasswordResetTokenRepository passwordResetTokenRepository;
 
 	private final PasswordEncoder passwordEncoder;
-
 	private final MailService mailService;
 
 	private final MessageSource messageSource;
@@ -47,85 +47,84 @@ public class SesamUserServiceImpl implements SesamUserService {
 	}
 
 	@Override
-	public SesamUser createUser(SesamUserCmd userCmd) throws ConflictException, UnprocessableEntityException {
-		final String email = userCmd.getEmail();
-
-		if (email == null || !email.matches("[^@ \\t\\r\\n]+@[^@ \\t\\r\\n]+\\.[^@ \\t\\r\\n]+")) {
-			throw new UnprocessableEntityException("The provided e-mail is not valid");
-		}
-
-		final String password = userCmd.getPassword();
-
-		if (isInvalidPassword(password)) {
-			throw new UnprocessableEntityException("password doesn't match the required criteria");
-		}
-
-		final String firstName = userCmd.getFirstName();
-
-		if (firstName == null || firstName.isBlank() || firstName.matches(NUMBER_REGEX)) {
-			throw new UnprocessableEntityException("firstName does not meet the requirements");
-		}
-
-		final String lastName = userCmd.getLastName();
-
-		if (lastName == null || lastName.isBlank() || lastName.matches(NUMBER_REGEX)) {
-			throw new UnprocessableEntityException("lastName does not meet the requirements");
-		}
-
-		if (userCmd.getRequestedRoles() == null) {
-			throw new UnprocessableEntityException("roles may not be null");
-		}
+	public SesamUser createUser(final SesamUserCmd userCmd) {
+		validateUser(userCmd);
 
 		final SesamUser user = new SesamUser(
-				email,
-				passwordEncoder.encode(password),
-				firstName,
-				lastName,
+				userCmd.getEmail(),
+				passwordEncoder.encode(userCmd.getPassword()),
+				userCmd.getFirstName(),
+				userCmd.getLastName(),
 				userCmd.getRequestedRoles().stream()
 						.distinct()
 						.map(SesamUserRole::new)
-						.collect(Collectors.toList())
+						.toList()
 		);
 
 		try {
 			return userRepository.save(user);
-		} catch (DataIntegrityViolationException e) {
+		} catch (final DataIntegrityViolationException e) {
 			throw new ConflictException("A user with that e-mail address already exists.", e);
 		}
 	}
 
+	private void validateUser(final SesamUserCmd userCmd) {
+		validatePassword(userCmd.getPassword());
+		validateEmail(userCmd.getEmail());
+		validateName(userCmd.getFirstName(), "firstName");
+		validateName(userCmd.getLastName(), "lastName");
+		validateRoles(userCmd.getRequestedRoles());
+	}
+
+	private static void validateRoles(final List<SesamUserRole.AttainableRole> roles) {
+		if (roles == null) {
+			throw new UnprocessableEntityException("roles may not be null");
+		}
+	}
+
+	private static void validateName(final String name, final String propertyName) {
+		if (!StringUtils.hasText(name) || name.matches(NUMBER_REGEX)) {
+			throw new UnprocessableEntityException(propertyName + " does not meet the requirements");
+		}
+	}
+
+	private static void validateEmail(final String email) {
+		if (email == null || !email.matches("[^@ \\t\\r\\n]+@[^@ \\t\\r\\n]+\\.[^@ \\t\\r\\n]+")) {
+			throw new UnprocessableEntityException("The provided e-mail is not valid");
+		}
+	}
+
 	@Override
-	public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+	public UserDetails loadUserByUsername(final String username) {
 		return userRepository.findByEmail(username)
 				.orElseThrow(() -> new UsernameNotFoundException(username + " not found."));
 	}
 
 	@Override
-	public void createPasswordResetToken(SesamUser user, String token) {
-		PasswordResetToken resetToken = new PasswordResetToken(user, token);
+	public void createPasswordResetToken(final SesamUser user, final String token) {
+		final PasswordResetToken resetToken = new PasswordResetToken(user, token);
 
 		passwordResetTokenRepository.save(resetToken);
 
-		Locale locale = LocaleContextHolder.getLocale();
+		final Locale locale = LocaleContextHolder.getLocale();
 
 		mailService.send(
-				"gp.se.team.3.1@gmail.com",
-				user.getUsername(),
-				messageSource.getMessage("reset.subject", null, locale),
-				messageSource.getMessage(
-						"reset.text",
-						new String[]{
-								user.getFirstName(),
-								user.getLastName(),
-								token,
-						},
-						locale
-				)
-		);
+				new MailInformation("gp.se.team.3.1@gmail.com",
+						user.getUsername(),
+						messageSource.getMessage("reset" + ".subject", null, locale),
+						messageSource.getMessage(
+								"reset.text",
+								new String[]{
+										user.getFirstName(),
+										user.getLastName(),
+										token,
+								},
+								locale
+						)));
 	}
 
 	@Override
-	public void updatePasswordWithToken(String token, String password) throws UnprocessableEntityException {
+	public void updatePasswordWithToken(final String token, final String password) {
 		final PasswordResetToken passwordResetToken = passwordResetTokenRepository
 				.findByToken(token)
 				.orElseThrow(() -> new InvalidTokenException("token does not exist."));
@@ -135,62 +134,68 @@ public class SesamUserServiceImpl implements SesamUserService {
 			throw new InvalidTokenException("token is expired");
 		}
 
-		if (isInvalidPassword(password)) {
-			throw new UnprocessableEntityException("password doesn't match the required criteria");
-		}
+		validatePassword(password);
 
-		SesamUser user = passwordResetToken.getUser();
+		final SesamUser user = passwordResetToken.getUser();
 		changePassword(user, password);
 
 		passwordResetTokenRepository.delete(passwordResetToken);
 	}
 
 	@Override
-	public void changePassword(SesamUser user, String password) {
+	public void changePassword(final SesamUser user, final String password) {
 		user.setPassword(passwordEncoder.encode(password));
 		userRepository.save(user);
 	}
 
-	private boolean isInvalidPassword(String password) {
-		return password == null || !password.matches("^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*])"
-				+ "[a-zA-Z0-9!@#$%^&*]{8,120}$");
+	private void validatePassword(final String password) {
+		if (password == null || !password.matches("^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*])"
+				+ "[a-zA-Z0-9!@#$%^&*]{8,120}$")) {
+			throw new UnprocessableEntityException("password doesn't match the required criteria");
+		}
 	}
 
 	@Override
 	public void deleteAll() {
 		userRepository.deleteAll();
 	}
-    public void deleteUser(SesamUser sesamUser) {
-        userRepository.delete(sesamUser);
-    }
 
 	@Override
-	public void saveAll(Iterable<SesamUser> users) {
+	public void deleteUser(final SesamUser sesamUser) {
+		userRepository.delete(sesamUser);
+	}
+
+	@Override
+	public void saveAll(final Iterable<SesamUser> users) {
 		userRepository.saveAll(users);
 	}
+
 	@Override
 	public List<SesamUser> getUsers() {
 		final List<SesamUser> articles = new ArrayList<>();
 		userRepository.findAll().forEach(articles::add);
 		return articles;
 	}
-    @Override
-    public SesamUser getUserByMail(String username) throws UsernameNotFoundException {
-        return userRepository.findByEmail(username)
-                .orElseThrow(() -> new UsernameNotFoundException(username + " not found."));
-    }
-    public void makeUserEdit(SesamUser user,
-							 String prename,
-							 String lastname,
-							 String username,
-							 List<SesamUserRole.AttainableRole> roles) {
-        user.setFirstName(prename);
-        user.setLastName(lastname);
-        user.setRoles(roles.stream()
-                .distinct()
-                .map(role -> new SesamUserRole(role, true))
-                .collect(Collectors.toList())
-        );
-        userRepository.save(user);
-    }
+
+	@Override
+	public SesamUser getUserByMail(final String username) {
+		return userRepository.findByEmail(username)
+				.orElseThrow(() -> new UsernameNotFoundException(username + " not found."));
+	}
+
+	@Override
+	public void makeUserEdit(final SesamUser user,
+							 final String prename,
+							 final String lastname,
+							 final String username,
+							 final List<SesamUserRole.AttainableRole> roles) {
+		user.setFirstName(prename);
+		user.setLastName(lastname);
+		user.setRoles(roles.stream()
+				.distinct()
+				.map(role -> new SesamUserRole(role, true))
+				.toList()
+		);
+		userRepository.save(user);
+	}
 }
